2010-12-09 Thu  Jari Aalto  <jari.aalto@cante.net>

	* README (README::Project Details): Add Wiki URL.

	* Makefile (ui): Use BIN, remove -nw option.

	* epackage.el
	(top level): Update documentation. Run Elint and Checkdoc on code
	and fix problems.
	(epackage-manager): New.
	(epackage-manager): Add `error'. Not implemented.
	(epackage-batch-ui-download-sources-list): Remove duplicate.
	(epackage--batch-ui-menu-actions): Correct function
	to `epackage-batch-ui-enable-package'.
	(epackage-sources-list-info-main): Do not require matching anything
	in DESCRIPTION part.
	(epackage--sources-list-regexp): New.
	(epackage-sources-list-info-parse-line): Use
	`epackage--sources-list-regexp'.
	(epackage-sources-list-info-main): Use
	`epackage--sources-list-regexp'.

2010-12-08 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-require-main): Disable
	`epackage-require-emacs'. url.el not used yet.
	(epackage--batch-ui-menu-header): New.
	(epackage-maintainer): New.
	(epackage-batch-ui-list-installed-packages): Add `interactive'.
	(epackage-batch-ui-list-not-installed-packages): Add `interactive'.
	(epackage-batch-ui-list-not-installed-packages): Add `interactive'.
	(epackage-batch-ui-list-downloaded-packages): Add `interactive'.
	(epackage-batch-ui-download-sources-list): Add `interactive'.
	(epackage-batch-ui-upgrade-all-packages): Add `interactive'.
	(epackage-batch-ui-loader-file-byte-compile): Add `interactive'.
	(epackage-batch-ui-loader-file-generate): Add `interactive'.
	(epackage-loader-file-generate): Move
	`epackage-with-message' outer to include *.elc generate message.
	(epackage-batch-ui-menu): Add "?" help command.
	(epackage-sources-list-info-pkg-list): Correct regexp.
	(epackage-sources-list-verify): Use or, not unless.
	(epackage-sources-list-p): Rewrite. Return file name.
	(epackage-cmd-package-check-macro): New.
	(epackage-cmd-autoload-package): Rewrite.
	(epackage-cmd-enable-package): Rewrite.
	(epackage-cmd-disable-package): Rewrite.